--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,23 @@
-#
-# This file contains configuration flags to customize your site
-#
+name: Aditya Saxena
 
-# Name of your site (displayed in the header)
-name: Your Name
+# Short bio or description
+description: Data Scientist | Machine Learning | Deep Learning Enthusiast
 
-# Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
+# URL of my avatar/ profile pic
+avatar: https://avatars2.githubusercontent.com/u/16677732?s=400&u=1c44a415c8f0daef7695583fe4da39c2d6493266&v=4
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: adityasaxena2608@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: adityasaxena26
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: adityasaxena26
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +32,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://adityasaxena26.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
